fixed form alignment

--- a/less/pixtory.less
+++ b/less/pixtory.less
@@ -11,6 +11,11 @@
 	bottom:0;
 }
 
+form {
+  margin-left: 330px;
+  margin-top: 100px;
+}
+
 @media (max-width: 767px) {
 
   #logo {
